--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^0.22.0
   google_fonts: ^2.1.0
   date_time_picker: ^2.1.0
+  dio: ^4.0.0
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
